--- a/modal.css
+++ b/modal.css
@@ -14,7 +14,7 @@
 			width: 100%;
 			left: 0;
 			top: 0;
-			position: absolute;
+			position: fixed;
 			opacity: 0;
 			animation-fill-mode: forwards;
 		}
